Addressed Review Comments